# Kafka-fastapi-project

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
scripts/: docker_compose_command.sh
scripts/nginx/: nginx.conf
src/: config.py  main.py
src/article/: container.py  router.py
src/article/domain/: model.py
src/article/infrastructure/repository/: article_repository.py
src/article/infrastructure/schemas/: article.py
src/article/service/: article_service.py
src/core/: kafka_config.py
src/migrations/: env.py
src/migrations/versions/: 2b6c5a5960bc_added_article_table.py  c23438d0b754_date_길이_변경.py  e7aa7c867bfc_source_newspaper_추가.py
src/pipeline/: kafka_config.py
src/pipeline/consumer/: consumer_router.py  filtered_article_consumer.py  raw_article_consumer.py
src/pipeline/consumer/consumers/: consumer.py  crawling_consumer.py  raw_article_consumer.py  saving_consumer.py  translating_consumer.py
src/pipeline/producer/: producer.py  producer_router.py  schema.py
