[tool.poetry]
name = "kafka-fastapi"
version = "0.1.0"
description = ""
authors = ["leehjhjhj <tsukiakarii@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.1"
fastui = "^0.5.2"
uvicorn = "^0.29.0"
pytest = "^8.1.1"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.13.1"
kafka-python = "^2.0.2"
aiokafka = "^0.10.0"
python-dotenv = "^1.0.1"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"
cryptography = "^42.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
